tests/type-check/bad/error-in-array.arr


a = {
    make: lam(rawarr):
      1
    end
}

c = [a: lam(): 
      d :: Number = "hello"
      d
    end]
